# desktop

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  INSTALLATION.md  NOTICE  README.md  README_zh.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  release.yml
e2e/: dashboard.spec.ts  pages.spec.ts
public/: manifest.json
src/: App.tsx  main.tsx  setupTests.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: backend_client.rs  cli.rs  commands.rs  lib.rs  llm_client.rs  main.rs  protocol_commands.rs
src/__tests__/: App.test.tsx  main.test.tsx
src/components/: AIChat.tsx  AgentPanel.tsx  CognitiveLoop.tsx  CommandPalette.tsx  ConnectionIndicator.tsx  ContextMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  GlobalSearch.tsx  KeyboardShortcuts.tsx  Layout.tsx  MemorySystem.tsx  Modal.tsx  NotificationCenter.tsx  OperationFeedback.tsx  PWAPrompt.tsx  PageLayout.tsx  ServiceWorkerRegistration.tsx  Skeleton.tsx  SkeletonEnhanced.tsx  StepByStepGuide.tsx  Toast.tsx  WelcomeWizard.tsx  useAlert.ts
src/constants/: endpoints.ts
src/design-system/: DESIGN_SYSTEM.md
src/hooks/: useAgentOS.tsx  useAnimations.tsx  useKeyboardShortcuts.ts
src/i18n/: en.json  index.tsx  zh.json
src/pages/: AIChatPage.tsx  AgentManagement.tsx  AgentRuntime.tsx  Agents.tsx  CognitiveLoop.tsx  Config.tsx  Configuration.tsx  Dashboard.tsx  (+21 more)
(+51 files in other folders)
