[package]
name = "agentos-desktop"
version = "0.1.0"
description = "AgentOS Desktop Client - Official GUI for AgentOS"
authors = ["Spharx AgentOS Team"]
license = "MIT"
repository = "https://github.com/SpharxTeam/AgentOS"
edition = "2021"

[lib]
name = "agentos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
dirs = "5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
webbrowser = "0.8"
which = "6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
